// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SecondaryCard /> shapshots should render with the given className 1`] = `
<div
  className="card myClass"
  onClick={[Function]}
  style={undefined}
>
  <div
    alwaysShow={true}
    className="imageContainer"
    src={undefined}
  />
  <div
    className="titleText"
  >
    myTitle
  </div>
</div>
`;

exports[`<SecondaryCard /> shapshots should render with the given image 1`] = `
<div
  className="card undefined"
  onClick={[Function]}
  style={undefined}
>
  <div
    alwaysShow={true}
    className="imageContainer"
    src="myImage"
  />
  <div
    className="titleText"
  >
    myTitle
  </div>
</div>
`;

exports[`<SecondaryCard /> shapshots should render with the given style 1`] = `
<div
  className="card undefined"
  onClick={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    src={undefined}
  />
  <div
    className="titleText"
  >
    myTitle
  </div>
</div>
`;

exports[`<SecondaryCard /> shapshots should render with the given title 1`] = `
<div
  className="card undefined"
  onClick={[Function]}
  style={undefined}
>
  <div
    alwaysShow={true}
    className="imageContainer"
    src={undefined}
  />
  <div
    className="titleText"
  >
    myTitle
  </div>
</div>
`;
